# cgp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml
crates/cgp/: Cargo.toml
crates/cgp-async-macro/: Cargo.toml
crates/cgp-base/: Cargo.toml
crates/cgp-base/src/: lib.rs  macro_prelude.rs
crates/cgp-component/: Cargo.toml
crates/cgp-component/src/: lib.rs  macro_prelude.rs  namespaces.rs
crates/cgp-component/src/providers/: mod.rs  use_context.rs
crates/cgp-component/src/types/: mod.rs  path.rs  redirect_lookup.rs
crates/cgp-core/: Cargo.toml
crates/cgp-core/src/: lib.rs  prelude.rs
crates/cgp-dispatch/: Cargo.toml
crates/cgp-dispatch/src/providers/builders/: build_and_merge_outputs.rs
crates/cgp-dispatch/src/providers/field_builders/: build_and_merge.rs
crates/cgp-dispatch/src/providers/field_matchers/: extract_handle.rs
crates/cgp-dispatch/src/providers/matchers/: match_first_with_field_handlers.rs  match_with_field_handlers.rs
crates/cgp-dispatch/src/providers/with_handlers/: match_with_handlers.rs  (+2 more)
crates/cgp-error/: Cargo.toml
crates/cgp-error-anyhow/: Cargo.toml
crates/cgp-error-extra/: Cargo.toml
crates/cgp-error-eyre/: Cargo.toml
crates/cgp-error/src/traits/: can_raise_error.rs  can_wrap_error.rs  has_error_type.rs
crates/cgp-extra/: Cargo.toml
crates/cgp-extra-macro-lib/: Cargo.toml
crates/cgp-extra-macro-lib/src/entrypoints/: cgp_auto_dispatch.rs  cgp_computer.rs  cgp_producer.rs
crates/cgp-field/: Cargo.toml
crates/cgp-field-extra/: Cargo.toml
crates/cgp-field/src/impls/: use_field.rs
crates/cgp-field/src/traits/: append_product.rs  mod.rs
crates/cgp-field/src/types/: mod.rs  product.rs
crates/cgp-handler/: Cargo.toml
crates/cgp-handler/src/components/: async_computer.rs  computer.rs  handler.rs  produce.rs
crates/cgp-handler/src/providers/: compose.rs  pipe.rs  promote.rs  return_input.rs
crates/cgp-macro/: Cargo.toml
crates/cgp-macro-lib/: Cargo.toml
crates/cgp-macro-lib/src/: field.rs  for_each_replace.rs  lib.rs
crates/cgp-macro-lib/src/attributes/: mod.rs  namespace.rs  use_namespace.rs
crates/cgp-macro-lib/src/cgp_fn/: apply_type.rs  attributes.rs  bounds.rs  constraint.rs  derive.rs  fn_body.rs  item_impl.rs  item_trait.rs  mod.rs  parse_implicits.rs  spec.rs  substitute_type.rs  type_equality.rs  type_predicates.rs  use_type.rs
crates/cgp-macro-lib/src/cgp_impl/: attributes.rs  derive.rs  implicit_args.rs  mod.rs  provider_bounds.rs  provider_call.rs  provider_impl.rs  spec.rs  transform.rs  use_provider.rs
crates/cgp-macro-lib/src/cgp_namespace/: spec.rs
crates/cgp-macro-lib/src/check_components/: derive.rs
crates/cgp-macro-lib/src/delegate_components/: attributes.rs  derive_namespace.rs  impl_delegate.rs  mod.rs
crates/cgp-macro-lib/src/derive_component/: attributes.rs  derive.rs  derive_namespace.rs  derive_redirect_lookup.rs  mod.rs  preprocess.rs  provider_trait.rs  use_context_impl.rs
crates/cgp-macro-lib/src/derive_extractor/: extract_field_impls.rs
crates/cgp-macro-lib/src/derive_getter/: blanket.rs  constraint.rs  getter_field.rs  method.rs  mod.rs  parse.rs  use_field.rs  use_fields.rs  with_provider.rs
crates/cgp-macro-lib/src/derive_has_fields/: product.rs
crates/cgp-macro-lib/src/entrypoints/: cgp_auto_getter.rs  cgp_fn.rs  cgp_getter.rs  cgp_impl.rs  cgp_inherit.rs  cgp_namespace.rs  cgp_new_provider.rs  cgp_preset.rs  cgp_provider.rs  cgp_record.rs  cgp_type.rs  check_components.rs  delegate_and_check_components.rs  delegate_components.rs  mod.rs
crates/cgp-macro-lib/src/parse/: check_components.rs  define_preset.rs  delegate_and_check_components.rs  delegate_components.rs  mod.rs  path.rs  type_spec.rs
crates/cgp-macro-lib/src/preset/: impl_is_preset.rs
crates/cgp-macro-lib/src/type_component/: derive.rs
crates/cgp-macro/src/: lib.rs
crates/cgp-monad/: Cargo.toml
crates/cgp-monad/src/providers/: pipe_monadic.rs
crates/cgp-run/: Cargo.toml
crates/cgp-runtime/: Cargo.toml
crates/cgp-runtime/src/traits/: has_runtime_type.rs
crates/cgp-tests/: Cargo.toml
crates/cgp-tests/src/: lib.rs
crates/cgp-tests/src/namespaces/: extend.rs  extended.rs  generics.rs  mod.rs
crates/cgp-tests/src/tests/: check_components.rs  delegate_and_check_components.rs
crates/cgp-tests/tests/: cgp_fn.rs  namespace.rs
crates/cgp-tests/tests/cgp_fn_tests/: async.rs  basic.rs  call.rs  extend.rs  foreign_type.rs  foreign_type_equality.rs  generics.rs  impl_generics.rs  mod.rs  multi.rs  mutable.rs  nested_foreign_type.rs  use_type.rs  use_type_alias.rs
crates/cgp-tests/tests/component_tests/: mod.rs
crates/cgp-tests/tests/getter_tests/: clone.rs  mref.rs  non_self.rs  non_self_auto.rs  option.rs  slice.rs  string.rs
crates/cgp-tests/tests/handler_tests/: handler_macro.rs  pipe.rs  producer_macro.rs
crates/cgp-tests/tests/namespace_tests/: experiments.rs  mod.rs  multi_param.rs  namespace.rs  open.rs  redirect.rs  use_namespace.rs
crates/cgp/src/: lib.rs
crates/core/cgp-error/: Cargo.toml
crates/core/cgp-error/src/: lib.rs
crates/macros/cgp-macro-lib/: Cargo.toml
crates/macros/cgp-macro-lib/src/: cgp_component.rs  cgp_data.rs  cgp_fn.rs  cgp_impl.rs  cgp_record.rs  cgp_type.rs  cgp_variant.rs  derive_build_field.rs  derive_extract_field.rs  derive_from_variant.rs  derive_has_field.rs  derive_has_fields.rs  lib.rs  path.rs  product.rs  sum.rs  symbol.rs
crates/macros/cgp-macro-test-util/: Cargo.toml  README.md
crates/macros/cgp-macro-test-util-lib/: Cargo.toml
crates/macros/cgp-macro-test-util-lib/src/: keywords.rs  lib.rs
crates/macros/cgp-macro-test-util/src/: lib.rs
crates/main/cgp-base-extra/: Cargo.toml
crates/main/cgp-base-extra/src/: lib.rs  macro_prelude.rs
crates/tests/cgp-macro-tests/: Cargo.toml
crates/tests/cgp-macro-tests/tests/: ident_with_type_params.rs  ident_with_type_params_tests.rs  invalid_expansion_tests.rs  parser_rejections_tests.rs
crates/tests/cgp-test-crate-a/: Cargo.toml
crates/tests/cgp-test-crate-a/src/: lib.rs
crates/tests/cgp-test-crate-b/: Cargo.toml
crates/tests/cgp-test-crate-b/src/: lib.rs
(+1145 files in other folders)
