[workspace]

resolver = "3"

members = [
    "crates/cgp",
    "crates/cgp-core",
    "crates/cgp-extra",
    "crates/cgp-async-macro",
    "crates/cgp-component",
    "crates/cgp-macro",
    "crates/cgp-macro-lib",
    "crates/cgp-type",
    "crates/cgp-field",
    "crates/cgp-field-extra",
    "crates/cgp-error",
    "crates/cgp-error-extra",
    "crates/cgp-error-anyhow",
    "crates/cgp-error-eyre",
    "crates/cgp-error-std",
    "crates/cgp-extra-macro",
    "crates/cgp-extra-macro-lib",
    "crates/cgp-handler",
    "crates/cgp-monad",
    "crates/cgp-dispatch",
    "crates/cgp-run",
    "crates/cgp-runtime",
    "crates/cgp-tests",
]

[workspace.package]
rust-version    = "1.89"
edition         = "2024"
license         = "Apache-2.0"
repository      = "https://github.com/contextgeneric/cgp"
authors         = ["Soares Chen <soares.chen@maybevoid.com>"]
keywords        = ["cgp"]

[workspace.dependencies]
cgp                         = { version = "0.6.1", path = "./crates/cgp" }
cgp-core                    = { version = "0.6.1", path = "./crates/cgp-core" }
cgp-extra                   = { version = "0.6.1", path = "./crates/cgp-extra" }
cgp-async-macro             = { version = "0.6.1", path = "./crates/cgp-async-macro" }
cgp-component               = { version = "0.6.1", path = "./crates/cgp-component" }
cgp-macro                   = { version = "0.6.1", path = "./crates/cgp-macro" }
cgp-macro-lib               = { version = "0.6.1", path = "./crates/cgp-macro-lib" }
cgp-type                    = { version = "0.6.1", path = "./crates/cgp-type" }
cgp-field                   = { version = "0.6.1", path = "./crates/cgp-field" }
cgp-field-extra             = { version = "0.6.1", path = "./crates/cgp-field-extra" }
cgp-error                   = { version = "0.6.1", path = "./crates/cgp-error" }
cgp-error-extra             = { version = "0.6.1", path = "./crates/cgp-error-extra" }
cgp-extra-macro             = { version = "0.6.1", path = "./crates/cgp-extra-macro" }
cgp-extra-macro-lib         = { version = "0.6.1", path = "./crates/cgp-extra-macro-lib" }
cgp-handler                 = { version = "0.6.1", path = "./crates/cgp-handler" }
cgp-monad                   = { version = "0.6.1", path = "./crates/cgp-monad" }
cgp-dispatch                = { version = "0.6.1", path = "./crates/cgp-dispatch" }
cgp-run                     = { version = "0.6.1", path = "./crates/cgp-run" }
cgp-runtime                 = { version = "0.6.1", path = "./crates/cgp-runtime" }
