[package]
name         = "cgp-async-macro"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
version      = "0.6.1"
keywords     = { workspace = true }
description  = """
    Context-generic programming async macros
"""

[lib]
proc-macro = true

[features]

[dependencies]
syn             = { version = "2.0.95", features = [ "full" ] }
quote           = "1.0.38"
proc-macro2     = "1.0.92"
