[package]
name         = "cgp-base"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp-base-types  = { workspace = true }
cgp-component   = { workspace = true }
cgp-macro       = { workspace = true }
