[package]
name         = "cgp-component"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Core CGP traits and types used for implementing the CGP component system
"""

[dependencies]
