[package]
name         = "cgp-core"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core traits
"""

[dependencies]
cgp-async-macro     = { workspace = true }
cgp-component       = { workspace = true }
cgp-macro           = { workspace = true }
cgp-type            = { workspace = true }
cgp-error           = { workspace = true }
cgp-field           = { workspace = true }
