[package]
name         = "cgp-dispatch"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Extensible data type dispatchers for CGP handlers"

[dependencies]
cgp-core    = { workspace = true }
cgp-monad   = { workspace = true }
cgp-handler = { workspace = true }
