[package]
name         = "cgp-error-extra"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming error components
"""

[features]
default = [ "alloc" ]
alloc = []

[dependencies]
cgp-core    = { workspace = true }
