[package]
name         = "cgp-error"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming error components
"""

[dependencies]
cgp-component       = { workspace = true }
cgp-macro           = { workspace = true }
cgp-type            = { workspace = true }
