[package]
name         = "cgp-extra"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming extra meta-crate
"""
[features]
default = [ "full" ]
full = [ "cgp-error-extra/alloc" ]

[dependencies]
cgp-core        = { workspace = true }
cgp-extra-macro = { workspace = true }
cgp-error-extra = { workspace = true }
cgp-field-extra = { workspace = true }
cgp-run         = { workspace = true }
cgp-runtime     = { workspace = true }
cgp-handler     = { workspace = true }
cgp-monad       = { workspace = true }
cgp-dispatch    = { workspace = true }
