[package]
name         = "cgp-field"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming field traits
"""

[dependencies]
cgp-component       = { workspace = true }
cgp-type            = { workspace = true }
