[package]
name         = "cgp-handler"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Generalized handler interfaces for functional programming"

[dependencies]
cgp-core    = { workspace = true }
