[package]
name         = "cgp-macro-lib"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component macros implemented as a library.
"""

[features]
default = []

[dependencies]
syn             = { version = "2.0.95", features = [ "full", "extra-traits" ] }
quote           = "1.0.38"
proc-macro2     = "1.0.92"
prettyplease    = "0.2.27"
itertools       = "0.14.0"
