[package]
name         = "cgp-macro"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component macros
"""

[lib]
proc-macro = true

[features]
default = []

[dependencies]
syn                     = { version = "2.0.95", features = [ "full", "extra-traits" ] }
cgp-macro-lib           = { workspace = true }
