[package]
name         = "cgp-monad"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Monadic constructs for CGP computation"

[dependencies]
cgp-core    = { workspace = true }
cgp-handler = { workspace = true }
