[package]
name         = "cgp-monad"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = "Monadic constructs for CGP computation"

[dependencies]
cgp         = { version = "0.7.0", path = "../cgp-core", package = "cgp-core" }
cgp-handler = { workspace = true }
