[package]
name         = "cgp-run"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming runner component
"""

[dependencies]
cgp-core            = { workspace = true }
