[package]
name         = "cgp-runtime"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming core component traits
"""

[dependencies]
cgp-core    = { workspace = true }
