[package]
name         = "cgp-tests"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
description  = """
    Context-generic programming meta crate
"""

[dependencies]
cgp                 = { workspace = true }
futures             = { version = "0.3.31" }
const_format        = { version = "0.2.34" }
