[package]
name         = "cgp"
version      = "0.6.1"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }
readme       = "./README.md"
description  = """
    Main crate for using context-generic programming
"""

[dependencies]
cgp-core       = { workspace = true }
cgp-extra      = { workspace = true }
