[package]
name         = "cgp-error"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp                 = { version = "0.7.0", path = "../../main/cgp-base-extra", package = "cgp-base-extra" }
cgp-macro           = { workspace = true }
cgp-type            = { workspace = true }
cgp-field           = { workspace = true }
