[package]
name         = "cgp-base-extra"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp-base   = { workspace = true }
cgp-type   = { workspace = true }
