[package]
name         = "cgp-macro-tests"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp                     = { workspace = true }
cgp-macro-test-util     = { workspace = true }
insta                   = { version = "1.48.0" }

[dev-dependencies]
cgp-macro-core          = { workspace = true }
cgp-macro-lib           = { workspace = true }
syn                     = { version = "2.0.95" }
quote                   = { version = "1.0.38" }
proc-macro2             = { version = "1.0.92" }
