[package]
name         = "cgp-test-crate-b"
version      = "0.7.0"
edition      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
keywords     = { workspace = true }

[dependencies]
cgp              = { workspace = true }
cgp-test-crate-a = { workspace = true }
